[package]
name = "siberon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
stm32f3-discovery = "0.7"
panic-itm = "0.4"

heapless = "0.7"

usb-device = "0.2"

[dependencies.stm32f3xx-hal]
version = "0.7"
features = ["stm32-usbd"]

[dependencies.keyberon]
git = "https://github.com/TeXitoi/keyberon.git"
