[package]
name = "siberon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["active"]
layout = []
active = ["layout", "keyberon/usb"]

[dependencies]
embedded-hal = "0.2"

[dependencies.keyberon]
#git = "https://github.com/TeXitoi/keyberon.git"
path = "../keyberon"
default-features = false
