[package]
name = "siberon-avr"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "siberon-avr"
test = false
bench = false

[dependencies]
panic-halt = "0.2"
ufmt = "0.1"
nb = "0.1"
embedded-hal = "0.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
features = ["arduino-uno"]

[dependencies.siberon]
path = "../"
default-features = false

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[patch.crates-io]
heapless = { path = "../../heapless" }
