[package]
name = "siberon-stm32f1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-itm = "0.4"

heapless = "0.7"

usb-device = "0.2"
embedded-hal = "0.2"

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal.git"
#path = "../../stm32f1xx-hal"
features = ["stm32f103", "rt"]

[dependencies.siberon]
path = "../"