[package]
name = "siberon-stm32f3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-itm = "0.4"

heapless = "0.7"

usb-device = "0.2"
embedded-hal = "0.2"

[dependencies.stm32f3xx-hal]
version = "0.8"
features = ["stm32f303xc", "usb", "rt"]

[dependencies.siberon]
path = "../"
