[package]
name = "siberon-stm32f3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "=0.7"

embedded-hal = "0.2"
usb-device = "0.2"
panic-itm = "0.4"
heapless = "0.7"

[dependencies.cortex-m-rtic]
version = "0.5"
default-features = false
features = ["cortex-m-7"]

[dependencies.stm32f3xx-hal]
#version = "0.8"
#git = "https://github.com/stm32-rs/stm32f3xx-hal.git"
git = "https://github.com/Sh3Rm4n/stm32f3xx-hal.git"
branch = "pac-upgrade"
features = ["stm32f303xc", "usb", "rt"]

[dependencies.siberon]
path = "../"

[profile.dev]
#opt-level = 1